# AVS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: avs.cpp  avs.h  main.cpp
src/headers/: avs.h
